--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -34,24 +34,23 @@
   
   <article>
     <span class="image">
-      <img src="assets/images/dp1.jpg" alt="Personal information" />
+      <img src="/assets/images/dp1.jpg" alt="Personal information" />
     </span>
     <header class="major">
       <h3><a href="/elements.html" class="link">Personal information</a></h3>
       <p></p>
     </header>
   </article>
-  
+
   <article>
     <span class="image">
-      <img src="assets/images/muse.png" alt="Academics" />
+      <img src="/assets/images/muse.png" alt="Academics" />
     </span>
     <header class="major">
       <h3><a href="/generic.html" class="link">Academics</a></h3>
       <p></p>
     </header>
   </article>
-  
 </section>
 
 
