--- a/_sass/components/_tiles_acad.scss
+++ b/_sass/components/_tiles_acad.scss
@@ -9,6 +9,8 @@
 	.tiles {
 		@include vendor('display', 'flex');
 		@include vendor('flex-wrap', 'wrap');
+                @include vendor('background-image', 'url("../images/muse.png")');
+
 		border-top: 0 !important;
 
 		& + * {
