--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -34,7 +34,7 @@
   
   <article>
     <span class="image">
-      <img src="/assets/images/dp1.jpg" alt="Personal information" />
+      <img src="/assets/images/dp1.jpg" alt="Personal information" >
     </span>
     <header class="major">
       <h3><a href="/elements.html" class="link">Personal information</a></h3>
