--- a/_sass/components/_tiles.scss
+++ b/_sass/components/_tiles.scss
@@ -36,9 +36,9 @@
 			position: relative;
 			width: 40%;
 
-			.image {
+			/*.image {
 				display: none;
-			        }
+			        }*/
                         
 
 			header {
