--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -30,7 +30,56 @@
 </html>
 
 
+
+
+
+
+
 <section id="one" class="tiles">
+  
+  <article style="background-image: url(&quot;/assets/images/dp1.jpg&quot;);">
+    <span class="image" style="display: none;">
+      <img src="/assets/images/dp1.jpg" alt="Personal information">
+    </span>
+    <header class="major">
+      <h3><a href="/elements.html" class="link">Personal information</a></h3>
+      <p></p>
+    </header>
+  <a href="/elements.html" class="link primary" aria-label="Personal information"></a></article>
+
+  <article style="background-image: url(&quot;/assets/images/muse.png&quot;);">
+    <span class="image" style="display: none;">
+      <img src="/assets/images/muse.png" alt="Academics">
+    </span>
+    <header class="major">
+      <h3><a href="/generic.html" class="link">Academics</a></h3>
+      <p></p>
+    </header>
+  <a href="/generic.html" class="link primary" aria-label="Academics"></a></article>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!---<section id="one" class="tiles">
   
   <article>
     <span class="image">
@@ -51,7 +100,7 @@
       <p></p>
     </header>
   </article>
-</section>
+</section>-->
 
 
 
