--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -49,7 +49,7 @@
 
   <article style="background-image: url(&quot;/assets/images/muse.png&quot;);">
     <span class="image" style="display: none;">
-      <img src="/assets/images/muse.png" alt="Academics">
+      <img src="/assets/images/spec2.png" alt="Academics">
     </span>
     <header class="major">
       <h3><a href="/generic.html" class="link">Academics</a></h3>
