--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -47,7 +47,7 @@
     </header>
   <a href="/elements.html" class="link primary" aria-label="Personal information"></a></article>
 
-  <article style="background-image: url(&quot;/assets/images/muse.png&quot;);">
+  <article style="background-image: url(&quot;/assets/images/spec2.png&quot;);">
     <span class="image" style="display: none;">
       <img src="/assets/images/spec2.png" alt="Academics">
     </span>
