--- a/_layouts/post_pers.html
+++ b/_layouts/post_pers.html
@@ -48,13 +48,15 @@
 		@include vendor('display', 'flex');
 		@include vendor('flex-wrap', 'wrap');
 		border-top: 0 ;
+                color:red;
 
 		& + * {
 			border-top: 0 ;
-		}
+		} 
+
 
 		article {
-			@include vendor('align-items', 'center');
+			/*@include vendor('align-items', 'center');
 			@include vendor('display', 'flex');
 			@include vendor('transition', (
 				'transform 0.25s ease',
@@ -62,7 +64,8 @@
 				'filter 1s ease',
 				'-webkit-filter 1s ease'
 			));
-			@include padding(4em, 4em);
+			@include padding(4em, 4em);*/
+                        
 			background-position: center;
 			background-repeat: no-repeat;
 			background-size: cover;
@@ -73,28 +76,15 @@
 			overflow: hidden;
 			position: relative;
 			width: 100%;
-
-			/*.image {
-				display: none;
-			        }*/
+                        opacity:0.5;
+                        transition: 0.3s;
                         
 
-			header {
-				position: relative;
-				z-index: 3;
-			}
+			.image {
+				display: none;
+			        }
 
-			h3 {
-				font-size: 1.75em;
-
-				a {
-					&:hover {
-						color: inherit !important;
-					}
-				}
-			}
-
-			.link.primary {
+ 			.link.primary {
 				border: 0;
 				height: 100%;
 				left: 0;
@@ -102,124 +92,20 @@
 				top: 0;
 				width: 100%;
 				z-index: 4;
+			} 
+                         
+                        header {
+				position: relative;
+				z-index: 3;
+
 			}
+                        &:hover{
+                          opacity:1;
+                        }
 
-			&:before {
-				@include vendor('transition', 'opacity 0.5s ease');
-				bottom: 0;
-				content: '';
-				display: block;
-				height: 100%;
-				left: 0;
-				opacity: 0.85;
-				position: absolute;
-				width: 100%;
-				z-index: 2;
-			}
 
-			&:after {
-				background-color: transparentize(_palette(bg), 0.75);
-				content: '';
-				display: block;
-				height: 100%;
-				left: 0;
-				position: absolute;
-				top: 0;
-				width: 100%;
-				z-index: 1;
-			}
-
-			&:hover {
-				&:before {
-					opacity: 0;
-				}
-			}
-
-			&.is-transitioning {
-				@include vendor('transform', 'scale(0.95)');
-				@include vendor('filter', 'blur(0.5em)');
-				opacity: 0;
-			}
-
-			&:nth-child(4n - 1),
-			&:nth-child(4n - 2) {
-				flex: 1 auto;
-			}
-
-			&:nth-child(6n - 5) {
-				&:before {
-					background-color: _palette(accent1);
-				}
-			}
-
-			&:nth-child(6n - 4) {
-				&:before {
-					background-color: _palette(accent2);
-				}
-			}
-
-			&:nth-child(6n - 3) {
-				&:before {
-					background-color: _palette(accent3);
-				}
-			}
-
-			&:nth-child(6n - 2) {
-				&:before {
-					background-color: _palette(accent4);
-				}
-			}
-
-			&:nth-child(6n - 1) {
-				&:before {
-					background-color: _palette(accent5);
-				}
-			}
-
-			&:nth-child(6n) {
-				&:before {
-					background-color: _palette(accent6);
-				}
-			}
-		}
-
-		@include breakpoint(large) {
-			article {
-				@include padding(4em, 3em);
-				height: 30vh;
-				max-height: 30em;
-				min-height: 20em;
-			}
-		}
-
-		@include breakpoint(medium) {
-			article {
-				width: 50% !important;
-			}
-		}
-
-		@include breakpoint(small) {
-			article {
-				@include padding(3em, 1.5em);
-				height: 16em;
-				max-height: none;
-				min-height: 0;
-
-				h3 {
-					font-size: 1.5em;
-				}
-			}
-		}
-
-		@include breakpoint(xsmall) {
-			display: block;
-
-			article {
-				height: 20em;
-				width: 100% !important;
-			}
-		}
 	}
+
 
 
 
@@ -228,24 +114,34 @@
 </style>
 
 
-
-
-
-
-
-
-
-<section class='tiles1'> 
+<!---<section id='one' class='tiles'> 
 
   <article style="background-image: url(&quot;/assets/images/bohubreehi.png&quot;);">
     <span class="image" style="display: none;">
       <img src="/assets/images/bohubreehi.png" alt="Bohubreehi">
     </span>
-    <!---<header class="major">
+    <header class="major">
       <h3><a href="https://bohubreehi.wordpress.com/" class="link"> Link to Bohubreehi </a></h3>
-    </header>-->
+    </header>
   <a href="https://bohubreehi.wordpress.com/" class="link primary" aria-label="Bohubreehi Homepage"></a></article>
 
+</section> --> 
+
+
+
+
+
+<section class='tiles1'>
+  <article style="background-image: url(&quot;/assets/images/bohubreehi.png&quot;);">
+    <!---<span class="image" display='none' color='red'>
+      <img src="/assets/images/bohubreehi.png" alt="Bohubreehi">
+    </span>--> 
+    <header style="text-align:center; padding-top: 100px">
+      <h1> <a href="https://bohubreehi.wordpress.com/" > Bohubreehi Homepage </a></h1>
+    </header>
+    <a href="https://bohubreehi.wordpress.com/" class="link primary" aria-label="Bohubreehi Homepage"></a>
+
+  </article>
 </section> 
 
 {% include footer.html %}
